# image-methods-25

./: README.md
docs/: МОИ_лр_02_.docx
first/: main.py
fourth/: CMakeLists.txt  README.md
fourth/output/: input_triangles.csv
fourth/src/: image.cpp  image.hpp  main.cpp  math.hpp  obj_loader.cpp  obj_loader.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
second/: brightness_results.csv  global_illuminance_results.csv  global_point_coordinates.csv  local_illuminance_results.csv  main.py
third/: README.md  brightness_results.csv  control_scenarios.csv  input_light_source.csv  input_observers.csv  input_surface.csv  lighting.py  main.py  scene.py  vector.py
third/results/: README.md  brightness_results.txt
third/tests/: test_lighting.py  test_smoke.py  test_vector.py
